# hey_investment

./: CHANGELOG.md  Makefile  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.hermes/plans/: implementation-plan.md
src/: app.py  db.py  engine.py  pipeline.py
src/components/: DashboardCard.astro  DrawdownChart.astro  EquityCurve.astro  MonthlyReturns.astro  TradesTable.astro
src/data/: backtest.json  hey_investment.db
src/layouts/: BaseLayout.astro
src/pages/: index.astro
src/templates/: index.html
static/: style.css
